[tool.poetry]
name = "streamlit-blockly"
version = "0.1.0"
description = ""
authors = ["ohtaman <ohtamans@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.0"

[tool.poetry.group.dev.dependencies]
wheel = "^0.43.0"
pytest = "^8.3.2"
playwright = "^1.45.1"
pytest-playwright-snapshot = "^1.0"
pytest-rerunfailures = "^14.0"
mypy = "^1.11.2"
pre-commit = "^3.8.0"
types-requests = "^2.32.0.20240712"
ruff = "^0.6.2"

[tool.mypy]
files = ["streamlit_blockly/"]

[tool.ruff]
line-length = 128
lint.extend-ignore = [
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D205", # blank-line-after-summary
    "D415"  # ends-in-punctuation
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"e2e/*" = ["D"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
